# Z-n-

./: .gitignore  00_introduction.md  01_first_law.md  02_second_law.md  03_third_law.md  04_synthesis.md  Aurum_Grid_Investor_Package.md  Cosmos-QEP.md  DEPLOYMENT_GUIDE.md  IAR.tar  Mk6SwHu56Rs.md  Nexus2025.tar  PROJECT_ORION_DOSSIER.md  README.md  TypeScriptC.tar  TypeScriptZ (2).tar  TypeScriptZ.md  TypeScriptZ.tar  ZaD(n).tar  agent.md  agi.md  agui.md  agui.tar  arkhen.md  arweave-quick-start.md  arweave_storage.lua  cat_benchmark_paper.md  clarkean_archetypes.md  cli.js  collaborative_framework_annotated (1).md  collaborative_framework_annotated.md  jest.config.js  jest.setup.js  jest.setup.ts  node.md  orion.md  package-lock.json  package.json  permanent_storage.lua  ports.md  (+17 more)
.github/: CODEOWNERS
R/: DESCRIPTION  calculate_power.R
TimeKeeper/: TimeCluster.md  TimeCluster.tar  TimeKeeper OS.tar  TimeKeeperInstaller.tar  TimePortal.md  TimePortal.tar  readme.md
Zeitgeist/: Zeitgeist.tar  readme.md
ao-bitcointalk-forum/: README.md
ao-forum/: app.js  index.html  process.lua  style.css
artifacts/: orion_irc.txt  orion_patch_2013_03.txt  orion_signal.txt
aurumgrid-ipfs-arweave-demo/: .dockerignore  LICENSE  README.md  requirements.txt  (+1 more)
lattica-tool-server/: .gitignore  Cargo.toml
lattica-tool-server/examples/: qft.rs
lattica-tool-server/lattica-tool-server/: Cargo.toml
lattica-tool-server/src/: main.rs  protocol.rs
lattica-tool-server/src/handlers/: execute_code.rs  mod.rs  search_web.rs
lattica-tool-server/src/sandbox/: mod.rs  wasm_executor.rs
(+227 files in other folders)
