[package]
name = "lattica-tool-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
wasmtime = { version = "23.0", features = ["async"] }
wasmtime-wasi = "23.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tempfile = "3.6"
colored = "2.1"